crates/ttrpg_interp/tests/snapshots/snapshot_output__derive_returns_enum_variant.snap
---
source: crates/ttrpg_interp/tests/snapshot_output.rs
expression: val
---
EnumVariant {
    enum_name: Name(
        "Shape",
    ),
    variant: Name(
        "circle",
    ),
    fields: {},
}
