crates/ttrpg_interp/tests/snapshots/snapshot_output__derive_returns_list.snap
---
source: crates/ttrpg_interp/tests/snapshot_output.rs
expression: val
---
List(
    [
        Int(
            0,
        ),
        Int(
            2,
        ),
        Int(
            4,
        ),
        Int(
            6,
        ),
        Int(
            8,
        ),
    ],
)
