crates/ttrpg_interp/tests/snapshots/snapshot_output__derive_returns_struct.snap
---
source: crates/ttrpg_interp/tests/snapshot_output.rs
expression: val
---
Struct {
    name: Name(
        "Point",
    ),
    fields: {
        Name(
            "x",
        ): Int(
            0,
        ),
        Name(
            "y",
        ): Int(
            0,
        ),
    },
}
