crates/ttrpg_interp/tests/snapshots/snapshot_output__negative.snap
---
source: crates/ttrpg_interp/tests/snapshot_output.rs
expression: negative
---
Str(
    "negative",
)
