crates/ttrpg_interp/tests/snapshots/snapshot_output__positive.snap
---
source: crates/ttrpg_interp/tests/snapshot_output.rs
expression: positive
---
Str(
    "positive",
)
