crates/ttrpg_interp/tests/snapshots/snapshot_output__runtime_error_undefined_derive.snap
---
source: crates/ttrpg_interp/tests/snapshot_output.rs
expression: err.to_string()
---
undefined derive or table 'nonexistent'
