crates/ttrpg_interp/tests/snapshots/snapshot_output__runtime_error_wrong_arg_count.snap
---
source: crates/ttrpg_interp/tests/snapshot_output.rs
expression: err.to_string()
---
missing required argument 'b' for 'add' (at 4294967295..4294967295)
